# mtg-mcp-2

./: .dockerignore  Cargo.toml  Copilot-Guidelines  Dockerfile  MTG_MCP_TOOLS_DOCUMENTATION.md  README.md  docker-compose.yml  docker-launch.ps1  docker-launch.sh  mcp_tools_schema.json  test-mcp-full.bat  test_server.sh
src/: main.rs
