[package]
name = "mtg-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
mcp-core = "0.1"
tokio = { version = "1", features = ["full"] }
scryfall = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
